Update definition to OpenAPI 3.0.3 Adding nullable field Update MindMeld server
