# examples/custom_action/example_server/swagger_server/models/__init__.py
@@ -5,9 +5,6 @@ from __future__ import absolute_import
 # import models into model package
 from .data import Data
 from .directive import Directive
-from .domain import Domain
 from .entity import Entity
-from .intent import Intent
 from .request import Request
 from .responder import Responder
-from .transcript import Transcript
